--- a/.github/workflows/hello_workflow.yaml
+++ b/.github/workflows/hello_workflow.yaml
@@ -4,9 +4,9 @@ jobs:
   external-workflow:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout
+      - uses: actions/checkout@v3
         with:
-          repository: abystoma/external-workflow@v3
+          repository: abystoma/external-workflow
           ref: branch
       - name: Greetings
         run: echo "$(<greetings.txt)"
